--- a/index.html
+++ b/index.html
@@ -1,45 +1,39 @@
 <!DOCTYPE html>
-<!-- 
-	Student Name: Maria Cruz
-	File Name: template.html
-	Today's Date: May 7, 2021
- -->
 <html lang="en">
 <head>
-	<title>Wild Rescues: Home</title>
-	<meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Website Title</title>
 </head>
 <body>
-
-	<header>
-		<h1>&#128062; Wild Rescues</h1>
-		<h3>Rescue. Rehabilitate. Release.</h3>
-	</header>
-	
-	<nav>
-		<p>Home &nbsp; &#9672; &nbsp; 
-		About Us &nbsp; &#9672; &nbsp; 
-		Partnership &nbsp; &#9672; &nbsp; 
-		Gallery &nbsp; &#9672; &nbsp; 
-		FAQs &nbsp; &#9672; &nbsp; 
-		Contact</p>
-	</nav>
-	
-	<!-- Use the main area to add the main content to the webpage -->
-	<main>
-	
-		<p>Welcome to Wild Rescues. Our mission is to rescue, rehabilitate, and release wildlife back into their natural environment. We are a nonprofit organization dedicated to helping injured wildlife.</p>
-		
-		<p>Our staff provides around-the-clock care for wildlife in need. We also provide long-term care for wildlife that cannot be released back into their natural environment.</p>
-		
-		<p>Will you partner with us? We need caring volunteers to help care for our animals. You can also donate, become a member, or become a sponsor. Contact us today.</p>
-	
-	</main>
-	
-	<footer>
-		<p>&copy; Copyright 2021. All Rights Reserved.</p>
-		<p>contact@wildrescues.net</p>
-	</footer>
-	
+    <header>
+        <!-- Your header content here -->
+    </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="partnership.html">Partnership</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="faqs.html">FAQs</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+    <main>
+        <div id="welcome">
+            <p>Welcome to our website!</p>
+            <p>We are dedicated to rescuing and rehabilitating wildlife.</p>
+            <p>Join us in our mission to protect animals.</p>
+        </div>
+        <div id="latest">
+            <h2>Our Latest Rescue: Baby Raccoons</h2>
+            <img src="baby-raccoons.jpg" alt="Hands holding three baby raccoons" width="300" height="200">
+            <p>Meet our latest rescues, Fizz, Bandit, and Mohawk. These three little guys were found abandoned near a home.</p>
+        </div>
+    </main>
+    <footer>
+        <p>Contact us at: <a href="mailto:contact@wildrescues.net">contact@wildrescues.net</a></p>
+        <!-- Your footer content here -->
+    </footer>
 </body>
 </html>
